# Vakta-AI

./: .dockerignore  .gitignore  Makefile  Makefile.bak  Makefile.bak.1756529051  Makefile.bak.1756533186  Makefile.bak.1756533598  Makefile.bak.1756533876  Makefile.bak.ws_auth.20250827-225105  Makefile.bak.ws_auth_fix.20250827-225738  Makefile.bak.ws_smoke_fix.20250827-224923  README.md  app.py  requirements-dev.txt  requirements.txt  test_api.sh  test_ws.py  test_ws_auth.py  test_ws_jwt.py  test_ws_raw.py  ws_audio.py.orig  ws_audio.py.patched  ws_audio_ping.py  ws_auto_probe.py  ws_client_finalizing.py  ws_debug_client.py  ws_end_probe.py  ws_file_to_server.py  ws_file_tts_client.py  ws_file_tts_client_fallback.py  ws_file_tts_client_safe.py  ws_file_tts_client_shotgun.py  ws_file_tts_client_stable.py  ws_file_tts_client_stable.py.bak  ws_file_tts_client_stable.py.bak.1756466206  ws_finalize_shotgun2.py  ws_mic_to_server.py  ws_smoke.sh
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: _models_legacy.py  db.py  deps_ws.py  main.py  main.py.bak  main.py.bak.1756193965  main.py.bak.1756194312  main.py.bak.1756194713  otel_init.py  redis_client.py  security.py
apps/api/app/core/: config.py  config.py.bak  jwt_utils.py  metrics.py
apps/api/app/db/: __init__.py  init_db.py  session.py
apps/api/app/middlewares/: ws_token_header.py
apps/api/app/models/: __init__.py  conversation.py  message.py  user.py  (+1 more)
apps/api/tests/: test_auth_otp.py  test_echo.py  test_health.py  test_ws.py
apps/api/vakta_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+89 files in other folders)
